// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rectangle snapshots evaluate with correct answer renders 1`] = `
<div>
  <div
    data-testid="group"
    scalex="1"
    scaley="1"
  >
    <div
      cursor="pointer"
      data-testid="rect"
      draggable="false"
      fill="rgba(137, 183, 244, 0.65)"
      height="200"
      opacity="0.5"
      position="relative"
      stroke="blue"
      stroke-width="0"
      width="300"
      x="5"
      y="5"
    />
  </div>
</div>
`;

exports[`Rectangle snapshots hotspot color renders 1`] = `
<div>
  <div
    data-testid="group"
    scalex="1"
    scaley="1"
  >
    <div
      cursor="pointer"
      data-testid="rect"
      draggable="false"
      fill="rgba(217, 30, 24, 0.65)"
      height="200"
      opacity="0.5"
      position="relative"
      stroke="blue"
      stroke-width="0"
      width="300"
      x="5"
      y="5"
    />
  </div>
</div>
`;

exports[`Rectangle snapshots outline color renders 1`] = `
<div>
  <div
    data-testid="group"
    scalex="1"
    scaley="1"
  >
    <div
      cursor="pointer"
      data-testid="rect"
      draggable="false"
      fill="rgba(137, 183, 244, 0.65)"
      height="200"
      opacity="0.5"
      position="relative"
      stroke="red"
      stroke-width="0"
      width="300"
      x="5"
      y="5"
    />
  </div>
</div>
`;

exports[`Rectangle snapshots outline width renders with default border width 1`] = `
<div>
  <div
    data-testid="group"
    scalex="1"
    scaley="1"
  >
    <div
      cursor="pointer"
      data-testid="rect"
      draggable="false"
      fill="rgba(137, 183, 244, 0.65)"
      height="200"
      opacity="0.5"
      position="relative"
      stroke="blue"
      stroke-width="0"
      width="300"
      x="5"
      y="5"
    />
  </div>
</div>
`;

exports[`Rectangle snapshots outline width renders with given border width 1`] = `
<div>
  <div
    data-testid="group"
    scalex="1"
    scaley="1"
  >
    <div
      cursor="pointer"
      data-testid="rect"
      draggable="false"
      fill="rgba(137, 183, 244, 0.65)"
      height="200"
      opacity="0.5"
      position="relative"
      stroke="blue"
      stroke-width="0"
      width="300"
      x="5"
      y="5"
    />
  </div>
</div>
`;
